# decrunch

./: Cargo.toml  README.md  build.rs
crunch/: crn_decomp.cpp  crn_decomp.h
src/: crunch.rs  lib.rs  tests.rs
